# ink-exercises

./: .gitignore  Makefile  README.md
contracts/common-staking/: Cargo.toml
contracts/common-staking/src/: lib.rs  runtime_call.rs
contracts/enroll/: Cargo.toml  lib.rs
contracts/voting/: Cargo.toml  errors.rs  lib.rs
contracts/voting/src/: errors.rs  events.rs  lib.rs  tests.rs
contracts/weighted-voting/: Cargo.toml
contracts/weighted-voting/src/: chain_extension.rs  errors.rs  lib.rs
exercises/1-drink-test/: README.md
exercises/1-drink-test/tests/: Cargo.toml  lib.rs
exercises/2-runtime-call/: README.md
exercises/2-runtime-call/runtime-call/: Cargo.toml  lib.rs
exercises/2-runtime-call/tests/: Cargo.toml  lib.rs
exercises/3-chain-extension/: README.md
exercises/3-chain-extension/tests/: Cargo.toml  lib.rs
exercises/4-further-steps/: README.md
runtime/pallet-fake-staking/: Cargo.toml  lib.rs
runtime/sandbox-with-staking/: Cargo.toml  chain_extension.rs  lib.rs
