[package]
name = "voting"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[dev-dependencies]
enroll = { path = "../enroll", default-features = false, features = ["ink-as-dependency"] }
#drink = { version = "0.16.0" }
drink = { path = "../../../drink/drink" }

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
