[package]
name = "pallet-fake-staking"
edition = "2021"
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
parity-scale-codec = { version = "3.0", features = ["derive"], default-features = false }
scale-info = { version = "2.10.0", features = ["derive"], default-features = false }

frame-support = { version = "30.0.0", default-features = false }
frame-system = { version = "30.0.0", default-features = false }
sp-core = { version = "30.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-system/std",
    "frame-support/std",
    "sp-core/std",
    "sp-std/std",
]
