[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
enroll = { path = "../../../contracts/enroll", default-features = false, features = ["ink-as-dependency"] }
voting = { path = "../../../contracts/voting", default-features = false, features = ["ink-as-dependency"] }

drink = { path = "../../../../drink/drink" }
